AG-38404 UI fixes based on design review
Squashed commit of the following:

commit b86527d3f23d2eec5d67ed5674559187845b272d
Merge: d76bb17a b73f0172
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Fri Dec 20 16:42:32 2024 +0500

    Merge branch 'master' into fix/AG-38404

commit d76bb17ab04eac7b0f52224ee75e5e6508db224c
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Fri Dec 20 12:12:46 2024 +0500

    fixed body color

commit e164aa740d4140c6b61f384e219c7ea2ba06db2f
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Fri Dec 20 12:04:13 2024 +0500

    fixed colors

commit c9275612ffcf7168da4df176ede70eb52be681be
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Thu Dec 19 19:09:42 2024 +0500

    reverted back button

commit bb8dd04d95899c393e2b3d1dad38bfd5ebd9e147
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Thu Dec 19 17:55:10 2024 +0500

    updated back button

commit aaa11b5cd488f248302d9a14958d45aeb2cf01a2
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Thu Dec 19 17:25:06 2024 +0500

    fix text and icon colors

commit 8daa48bbba2a43b7781f069abe38a138a3f7b19e
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Thu Dec 19 17:24:39 2024 +0500

    fix search input style

commit 377d869ac4b678b447a63e291c0ea28858669a59
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Thu Dec 19 17:15:36 2024 +0500

    fixed current location colors

commit 097ca2245c549fd355be1b24fc799a23c946be33
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Thu Dec 19 17:09:32 2024 +0500

    fixed button size

commit c65e2089cc1b95fd4eb419eaa176b9d523c1142f
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Thu Dec 19 17:01:56 2024 +0500

    added back button

commit 05b83406350508b532e00d946b557e75c2727068
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Thu Dec 19 16:44:40 2024 +0500

    fixed input styles

commit 7859b9381031d1375c47adcf22a98d55811e9201
Author: Kurbanali Rusla

--- a/src/popup/components/Locations/endpoints.pcss
+++ b/src/popup/components/Locations/endpoints.pcss
@@ -7,7 +7,7 @@
     height: 100%;
     padding-top: 16px;
     transition: opacity var(--t3);
-    background-color: var(--white);
+    background-color: var(--fills-backgrounds-page-background-default);
     overflow: hidden;
 
     /* TODO: Remove it when popup design will be available in wider screens. */
@@ -54,6 +54,7 @@
         }
 
         &-icon {
+            color: var(--stroke-icons-product-icons-default);
 
             &--active {
                 pointer-events: none;
@@ -68,17 +69,7 @@
     }
 
     &__search-in {
-        width: 100%;
-        padding: 16px 45px 16px 15px;
-        font-size: 16px;
-        border: 0;
-        border-radius: 8px;
-        background-color: var(--endpoint-gray-background);
-        color: var(--gray-base);
-
-        &:focus {
-            outline: 1px solid var(--grayd8);
-        }
+        padding: 16px 45px 16px 16px;
     }
 
     &__cross {
