--- a/src/popup/components/Ping/ping.pcss
+++ b/src/popup/components/Ping/ping.pcss
@@ -6,10 +6,10 @@
     text-align: right;
 
     &--success {
-        color: var(--green700);
+        color: var(--text-links-link-default);
     }
 
     &--warning {
-        color: var(--orange);
+        color: var(--text-links-attention-link-default);
     }
 }
