--- a/src/popup/styles/common.pcss
+++ b/src/popup/styles/common.pcss
@@ -26,7 +26,7 @@ body {
     font-size: 1.6rem;
     line-height: 1.4;
     color: var(--gray-base);
-    background-color: var(--white);
+    background-color: var(--fills-backgrounds-page-background-default);
 
     /* TODO: Remove it when popup design will be available in wider screens. */
     .android & {
