--- a/src/popup/styles/vars.pcss
+++ b/src/popup/styles/vars.pcss
@@ -60,14 +60,49 @@
     --endpoint-gray-background: #f3f3f3;
 
     /* Base Colors */
+    --gray-0: #FFFFFF;
     --gray-10: #F6F6F6;
     --gray-20: #E4E4E4;
+    --gray-30: #D2D2D2;
+    --gray-40: #C0C0C0;
+    --gray-50: #A4A4A4;
+    --gray-60: #7F7F7F;
     --gray-70: #5B5B5B;
     --gray-80: #3D3D3D;
+    --gray-90: #1F1F1F;
+    --product-primary-30: #B2CC9E;
+    --product-primary-50: #74A352;
+    --product-primary-60: #68924A;
+    --product-primary-70: #5C8141;
+    --orange-50: #D58500;
 
-    /* Dynamic Colors */
+    /* Text */
+    --text-main-text-main-default: var(--gray-80);
+    --text-description-description-default: var(--gray-60);
+    --text-labels-labels-default: var(--gray-70);
+    --text-placeholder-placeholder-default: var(--gray-50);
+    --text-links-link-default: var(--product-primary-50);
+    --text-links-link-hovered: var(--product-primary-60);
+    --text-links-link-pressed: var(--product-primary-70);
+    --text-links-link-disabled: var(--product-primary-30);
+    --text-links-attention-link-default: var(--orange-50);
+
+    /* Fills */
+    --fills-backgrounds-page-background-default: var(--gray-0);
     --fills-backgrounds-page-background-hovered: var(--gray-10);
     --fills-backgrounds-page-background-pressed: var(--gray-20);
+    --fills-buttons-main-button-default: var(--product-primary-50);
+    --fills-buttons-main-button-hovered: var(--product-primary-60);
+    --fills-buttons-main-button-pressed: var(--product-primary-70);
+    --fills-buttons-main-button-disabled: var(--product-primary-30);
+    --fills-inputs-input-background-default: var(--gray-10);
+
+    /* Stroke */
+    --stroke-icons-gray-icons-default: var(--gray-60);
+    --stroke-icons-product-icons-default: var(--product-primary-50);
+    --stroke-buttons-secondary-button-default: var(--gray-80);
+    --stroke-inputs-inactive-input-stroke-default: var(--gray-20);
+    --stroke-inputs-active-input-stroke-default: var(--gray-50);
 
     @media (prefers-color-scheme: dark) {
         --white: #131313;
@@ -93,9 +128,21 @@
         --dark13: #eeeeee;
         --endpoint-gray-background: #4d4d4d;
 
-        /* Dynamic Colors */
+        /* Text */
+        --text-main-text-main-default: var(--gray-20);
+        --text-description-description-default: var(--gray-40);
+        --text-labels-labels-default: var(--gray-30);
+
+        /* Fills */
+        --fills-backgrounds-page-background-default: var(--gray-90);
         --fills-backgrounds-page-background-hovered: var(--gray-80);
         --fills-backgrounds-page-background-pressed: var(--gray-70);
+        --fills-inputs-input-background-default: var(--gray-80);
+
+        /* Stroke */
+        --stroke-icons-gray-icons-default: var(--gray-40);
+        --stroke-buttons-secondary-button-default: var(--gray-20);
+        --stroke-inputs-inactive-input-stroke-default: var(--gray-80);
     }
 }
 
@@ -123,9 +170,21 @@
     --dark13: #131313;
     --endpoint-gray-background: #f3f3f3;
 
-    /* Dynamic Colors */
+    /* Text */
+    --text-main-text-main-default: var(--gray-80);
+    --text-description-description-default: var(--gray-60);
+    --text-labels-labels-default: var(--gray-70);
+
+    /* Fills */
+    --fills-backgrounds-page-background-default: var(--gray-0);
     --fills-backgrounds-page-background-hovered: var(--gray-10);
     --fills-backgrounds-page-background-pressed: var(--gray-20);
+    --fills-inputs-input-background-default: var(--gray-10);
+
+    /* Stroke */
+    --stroke-icons-gray-icons-default: var(--gray-60);
+    --stroke-buttons-secondary-button-default: var(--gray-80);
+    --stroke-inputs-inactive-input-stroke-default: var(--gray-20);
 }
 
 .dark-mode {
@@ -152,9 +211,21 @@
     --dark13: #eeeeee;
     --endpoint-gray-background: #4d4d4d;
 
-    /* Dynamic Colors */
+    /* Text */
+    --text-main-text-main-default: var(--gray-20);
+    --text-description-description-default: var(--gray-40);
+    --text-labels-labels-default: var(--gray-30);
+
+    /* Fills */
+    --fills-backgrounds-page-background-default: var(--gray-90);
     --fills-backgrounds-page-background-hovered: var(--gray-80);
     --fills-backgrounds-page-background-pressed: var(--gray-70);
+    --fills-inputs-input-background-default: var(--gray-80);
+
+    /* Stroke */
+    --stroke-icons-gray-icons-default: var(--gray-40);
+    --stroke-buttons-secondary-button-default: var(--gray-20);
+    --stroke-inputs-inactive-input-stroke-default: var(--gray-80);
 }
 
 .android {
